# Simulador

./: CMakeLists.txt  README.md  main.cpp
docs/adr/: Architectural_Style.md
libs/glad/: glad.c  glad.h
src/: CuerpoCeleste.cpp  CuerpoCeleste.h  Estrella.cpp  Estrella.h  Simulation.cpp  Simulation.h  Utils.h
src/Commons/: BrownDwarf.cpp  BrownDwarf.h  CelestialBodies.h  CelestialBody.cpp  CelestialBody.h  Planet.cpp  Planet.h  Star.cpp  Star.h  Vec3.cpp  Vec3.h
src/Creation/: CelestialBody.cpp  CelestialBody.h  Creation.cpp  Creation.h  Vec3.cpp  Vec3.h
src/GUI/: Interface.cpp  Interface.h  Interfaz.cpp  Interfaz.h
src/GestionCreacion/: CuerpoCeleste.cpp  CuerpoCeleste.h
src/MotorFísico/: CuerpoCeleste.cpp  CuerpoCeleste.h  GestorCalculos.cpp  GestorCalculos.h  MotorFisicoUtils.h
src/Physics/: CalculationManager.cpp  CalculationManager.h  Collisions.cpp  Collisions.h  LeapfrogKDK.cpp  LeapfrogKDK.h  Physics.cpp  Physics.h  PhysicsUtils.h
src/Physics/LinearOctree/: LinearElement.cpp  LinearElement.h  LinearNode.cpp  LinearNode.h  LinearOctree.cpp  LinearOctree.h
src/Physics/Octree/: ElementOctree.cpp  ElementOctree.h  ElementOctree.tpp  NodeOctree.cpp  NodeOctree.h  NodeOctree.tpp  Octree.cpp  Octree.h  Octree.tpp
src/Physics/spatial_structures/: SpatialStructure.cpp  SpatialStructure.h  geometry.cpp  geometry.h
src/Physics/spatial_structures/LinearOctree/: LinearElement.cpp  LinearElement.h  LinearNode.h  LinearOctree.cpp  LinearOctree.h
src/Physics/spatial_structures/Octree/: ElementOctree.h  NodeOctree.cpp  NodeOctree.h  NodeOctree.tpp  Octree.cpp  Octree.h  Octree.tpp
src/Visualization/: Simulation.cpp
